# nagyhazi-2

./: CMakeLists.txt  Contact.cpp  Contact.h  LICENSE  List.cpp  List.hpp  Loader.cpp  Loader.h  Name.cpp  Name.h  PhoneNumber.cpp  PhoneNumber.h  countries.cpp  countries.h  gtest_lite.h  main.cpp  memtrace.h  string.cpp  string.h
